# pacxplorer-ng

./: .gitignore  README.md  Readme.md  ida-plugin.json  ida_plugin_stub.py  pacxplorer.py  pyproject.toml  vermin.ini
.github/actions/setup-env/: action.yaml
.github/workflows/: main.yml  pypi.yaml
src/pacxplorerng/: coordinator.py  definitions.py  explorer.py  ida_plugin.py
src/pacxplorerng/analyzers/: movk.py  vtable.py
src/pacxplorerng/gui/: actions.py  choose.py
src/pacxplorerng/storage/: netnodes.py
